Add translation strings ahead of time

--- a/src/main/resources/assets/capetweaks/lang/en_us.json
+++ b/src/main/resources/assets/capetweaks/lang/en_us.json
@@ -5,6 +5,14 @@
 	"capetweaks.options.elytraTexture": "Custom elytra textures",
 	"capetweaks.options.withElytra": "Capes with elytra",
 	"capetweaks.options.disableCapes": "Disable capes entirely",
+	"capetweaks.options.filterCapes": "Filter specific capes",
+	"capetweaks.capes.minecon": "Minecon capes",
+	"capetweaks.capes.mojang": "Mojang capes",
+	"capetweaks.capes.translator": "Translator capes",
+	"capetweaks.capes.realms": "Realms Mapmaker capes",
+	"capetweaks.capes.crosspromotion": "Cross-promotion capes",
+	"capetweaks.capes.migration": "Migrator capes",
+	"capetweaks.capes.unique": "Capes one-of-a-kind",
 	"capetweaks.saveError": "Unable to save config file",
 	"capetweaks.saveError.description": "Changes to settings will be lost",
 	"capetweaks.discord.hibi": "Hibi's Discord",
