--- a/src/main/resources/assets/capetweaks/lang/en_us.json
+++ b/src/main/resources/assets/capetweaks/lang/en_us.json
@@ -2,21 +2,15 @@
 	"capetweaks.options": "Cape Options",
 
 	"capetweaks.options.category.general": "General",
-	"capetweaks.options.unclamp": "Free-swing capes",
-	"capetweaks.options.lerpMovement": "Smooth movement",
-	"capetweaks.options.elytraTexture": "Custom elytra textures",
-	"capetweaks.options.withElytra": "Capes with elytra",
-	"capetweaks.options.disableCapes": "Disable capes entirely",
-	"capetweaks.options.filterCapes": "Filter specific capes",
+	"capetweaks.options.unclamp": "Free-swing Capes",
+	"capetweaks.options.lerpMovement": "Smooth Movement",
+	"capetweaks.options.elytraTexture": "Custom Elytra Textures",
+	"capetweaks.options.withElytra": "Capes with Elytra",
+	"capetweaks.options.disableCapes": "Disable Capes Entirely",
 
-	"capetweaks.options.category.filter": "Filtered capes",
-	"capetweaks.capes.minecon": "Minecon capes",
-	"capetweaks.capes.mojang": "Mojang capes",
-	"capetweaks.capes.translator": "Translator capes",
-	"capetweaks.capes.realms": "Realms Mapmaker capes",
-	"capetweaks.capes.crosspromotion": "Cross-promotion capes",
-	"capetweaks.capes.migration": "Migrator capes",
-	"capetweaks.capes.unique": "Capes one-of-a-kind",
+	"capetweaks.options.capeSub": "Show or Hide Capes",
+	"capetweaks.options.capeSub.relog": "You may need to relog for changes to take effect.",
+	"capetweaks.cape.migrator": "Show Migrator Cape",
 
 	"capetweaks.saveError": "Unable to save config file",
 	"capetweaks.saveError.description": "Changes to settings will be lost",
